# xSIG2025

./: .gitignore  CMakeLists.txt  README.md  bandwidth_matmul_i8.cpp  bandwidth_reduceSum.cpp  matmul_by_mul-RS_i32.cpp  matmul_by_mul-RS_i8.cpp  matmul_f16.cpp  matmul_i8.cpp  power_matmul_by_mul-RS_i32.cpp  power_matmul_i8.cpp  test_bandwidth.sh  test_matmul.sh  test_matmul_by_mul-RS.sh  test_power.sh
